@@ -30,6 +30,8 @@ pkglib_LTLIBRARIES = libna-core.la
 
 exportformat_datadir = $(pkgdatadir)/export-format
 
+importmode_datadir = $(pkgdatadir)/import-mode
+
 AM_CPPFLAGS += \
 	-I $(top_srcdir)									\
 	-I $(top_srcdir)/src								\
@@ -40,6 +42,7 @@ AM_CPPFLAGS += \
 	-DSYSCONFDIR=\"$(sysconfdir)\"						\
 	-DG_LOG_DOMAIN=\"${NA_LOGDOMAIN_CORE}\"				\
 	-DPKGEXPORTFORMATDIR=\"$(exportformat_datadir)\"	\
+	-DPKGIMPORTMODEDIR=\"$(importmode_datadir)\"	\
 	$(NAUTILUS_ACTIONS_CFLAGS)							\
 	$(NULL)
 
@@ -148,6 +151,13 @@ exportformat_data_DATA = \
 	export-format-ask.png								\
 	$(NULL)
 
+importmode_data_DATA = \
+	import-mode-ask.png									\
+	import-mode-no-import.png							\
+	import-mode-override.png							\
+	import-mode-renumber.png							\
+	$(NULL)
+
 CLEANFILES = \
 	$(BUILT_SOURCES)									\
 	$(NULL)
@@ -155,5 +165,6 @@ CLEANFILES = \
 EXTRA_DIST = \
 	$(pkgdata_DATA)										\
 	$(exportformat_data_DATA)							\
+	$(importmode_data_DATA)								\
 	na-marshal.def										\
 	$(NULL)
